...
            "value": "Terminé"
          }
        },
        "de": {
          "stringUnit": {
            "state": "needs_review",
            "value": "Fertig"
          }
        }
      }
    },
    "Done typing": {
      "extractionState": "manual",
...
            "value": "Modèles"
          }
        },
        "de": {
          "stringUnit": {
            "state": "needs_review",
            "value": "Modelle"
          }
        }
      }
    },
    "More cloud history is available. Sync again to continue.": {
      "extractionState": "manual",
...
